2009-02-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c (lookup_key): Use exact match, otherwise F10, F11, or F12
	hotkeys bind to F1.

2009-02-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary do_plot): Move test for colorbox outside of
	boundary(), and only calculate placement of colorbox once.
	Bugfix.

	* term/canvas.trm: Taking the URL for associated javascripts from an
	environmental variable turns out to be less than useful if the scripts
	are tailored to the individual plots. Add a terminal option instead:
	    set term canvas mouse jsdir 'URL/for/javascripts/'

2009-02-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (define): Fix under-allocation of space for user
	variables named GPFUN_*.

2009-01-31  James R. Van Zandt  <jrvz@comcast.net>

	* docs/gnuplot.doc: Update documentation: user functions can have
	up to 12 variables.

	* src/fit.c (fit_command): Allow second independent variable to be
	renamed in a fit command.

2009-01-30  James R. Van Zandt  <jrvz@comcast.net>

	* src/command.c (define): save a function definition in a
	user-accessible variable

2009-01-28  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* term/emf.trm (GP_TA_NOUPDATECP, GP_TA_UPDATECP, GP_TA_LEFT)
	(GP_TA_RIGHT, GP_TA_CENTER, GP_TA_TOP, GP_TA_BOTTOM)
	(GP_TA_BASELINE): Added a GP_ prefix to avoid collision between
	these and the actual Windows API macros of the same names.

2009-01-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/breaders.c (edf_filetype_function): Fix for long headers.

2009-01-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c (pm3d_plot): Fix for "set pm3d depthorder" ignoring
	"set pm3d interpolate".

2009-01-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_fillbox):
	Fix segfault due to freeing an uninitialized buffer pointer.

	* term/cairo.trm (cairotrm_filled_polygon):
	Plug memory leak: image buffers were never freed.
